Make button "collapse" a bit more in order to fix overflowing icons

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -287,7 +287,7 @@ body {
 // Hack to fix icons in top menu buttons moving outside of the button when there is no space left
 @media (max-width: 920px) {
   #menu-top-menu {
-    max-width: 224px;
+    max-width: 213px;
   }
 
   // Also drop the osf-schema a bit
